desenvolvimento do html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
    <div>
+    <img src="/imagem 80x80.jpg" alt="imagem do criador da página de links, nicolas silva">
     <h1>Nicolas Silva</h1>
+    <p>São Paulo, Brasil</p>
    </div> 
 </body>
 </html>
