--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <img src="/imagem 80x80.jpg" alt="imagem do criador da página de links, nicolas silva">
     <h1>Nicolas Silva</h1>
     <p>São Paulo, Brasil</p>
+
+    <p>"Desenvolvedor front-end viciado em leitura."</p>
+
+    <a href="https://github.com/NicolasSilvaAndrade11MBTI">GitHub</a>
+    <a href="https://www.youtube.com/@NicolasSilva-io5oe">Youtube</a>
+    <a href="https://www.instagram.com/nicolas_silva4">Instagram</a>
+    <a href="https://tiktok.com">Tiktok</a>
+    <a href="https://linkedin.com">Linkedin</a>
    </div> 
 </body>
 </html>
