--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <div>
     <img src="/imagem 80x80.jpg" alt="imagem do criador da página de links, nicolas silva">
     <h1>Nicolas Silva</h1>
-    <p>São Paulo, Brasil</p>
+    <strong>São Paulo, Brasil</strong>
 
     <p>"Desenvolvedor front-end viciado em leitura."</p>
 
