adicionado atributo target para as ancoras projeto finalizado

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
     <p>"Desenvolvedor front-end viciado em leitura."</p>
 
-    <a href="https://github.com/NicolasSilvaAndrade11MBTI">GitHub</a>
+    <a href="https://github.com/NicolasSilvaAndrade11MBTI" target="_blank">GitHub</a>
     <a href="https://www.youtube.com/@NicolasSilva-io5oe">Youtube</a>
-    <a href="https://www.instagram.com/nicolas_silva4">Instagram</a>
-    <a href="https://tiktok.com">Tiktok</a>
-    <a href="https://linkedin.com">Linkedin</a>
+    <a href="https://www.instagram.com/nicolas_silva4" target="_blank">Instagram</a>
+    <a href="https://tiktok.com" target="_blank">Tiktok</a>
+    <a href="https://linkedin.com" target="_blank">Linkedin</a>
    </div> 
 </body>
 </html>
